--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,4 @@ set(EXTRA_COMPONENT_DIRS ../esp-idf-lib/components)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 
-project(blink)
+project(minuteman)
