--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,3 @@
-idf_component_register(SRCS "minuteman.c"
-                    INCLUDE_DIRS "."
+idf_component_register(SRCS "minuteman.c" "main.c"
+                    INCLUDE_DIRS "include"
                     )
