--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(EXTRA_COMPONENT_DIRS connect)
 set(EXTRA_COMPONENT_DIRS encoder)
 set(EXTRA_COMPONENT_DIRS protocols)
 set(EXTRA_COMPONENT_DIRS components)
-set(EXTRA_COMPONENT_DIRS ../esp-idf-lib/components)
+set(EXTRA_COMPONENT_DIRS esp-idf-lib/components)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 
