--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,3 @@
-idf_component_register(SRCS "minuteman.c" "main.c" "persistence.c" "alarm.c"
+idf_component_register(SRCS "minuteman.c" "main.c" "persistence.c" "alarm.c" "handlers.c"
                     INCLUDE_DIRS "include"
                     )
